--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-PORT=8080
+PORT="8080"
 JWT_SECRET="anomynous"
 DB_HOST="localhost"
 DB_USER="root"
 DB_PASS=""
 DB_NAME="CRUD"
+DB_TABLE='Students'
